syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "ReviewProto";

service ReviewService {
  rpc GetReviewsByStudentID (GetReviewsRequest) returns (GetReviewsResponse);
  rpc DeleteReview (DeleteReviewRequest) returns (DeleteReviewResponse);
}

message GetReviewsRequest {
  int64 student_id = 1;
}

message ReviewData {
  int64 id = 1;
  int64 student_id = 2;
  string student_name = 3;
  string book_name = 4;
  int32 rating = 5;
  string review_text = 6;
}

message GetReviewsResponse {
  repeated ReviewData reviews = 1;
}

message DeleteReviewRequest {
  int64 review_id = 1;
}

message DeleteReviewResponse {
  bool success = 1;
  string message = 2;
}